Bug 485576 - Fix a few minor gcc warnings. r=igor